# hydra-dl

./: Makefile  README.md  main.py  pyproject.toml  tickets.json  yt-dlp.conf
docs/adr/: 0001-record-architecture-style.md
