[project]
name = "hydra-dl"
version = "0.1.0"
description = "High-performance distributed video downloader using Hexagonal Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "yt-dlp>=2024.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer[all]>=0.9.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-aiofiles",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- CONFIGURACIÓN DE LINTER (RUFF) ---
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "PL"]
ignore = []

# --- CONFIGURACIÓN DE TYPE CHECKER (MYPY) ---
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# --- CONFIGURACIÓN DE TESTS (PYTEST) ---
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app"


[tool.hatch.build.targets.wheel]
packages = ["app"]
